--- a/styles.css
+++ b/styles.css
@@ -40,6 +40,21 @@ main {
     grid-template-columns: 30% 1fr;
 }
 
+@media screen and (max-width: 700px) {
+    body {
+        align-items: flex-start;
+    }
+
+    main {
+        width: 100vw;
+        display: flex;
+        flex-direction: column;
+        align-items: center;
+        padding: 0;
+        background-color: var(--Magnolia);
+    }
+}
+
 /* SIDEBAR */
 .sidebar {
     background: url(assets/images/bg-sidebar-desktop.svg),
@@ -100,6 +115,26 @@ main {
     letter-spacing: .1rem;
 }
 
+@media screen and (max-width: 700px) {
+    .sidebar {
+        background: url(assets/images/bg-sidebar-mobile.svg),
+            var(--Purplish-blue);
+        background-position: center;
+        background-repeat: no-repeat;
+        background-size: cover;
+        padding: 2rem 0 7rem 0;
+        border-radius: 0rem;
+        flex-direction: row;
+        justify-content: center;
+        gap: 1.4rem;
+        width: 100%;
+    }
+
+    .step-container {
+        display: none;
+    }
+}
+
 /* FORM CONTENT */
 .form-section {
     display: flex;
@@ -118,6 +153,27 @@ main {
     margin: 0;
     color: var(--Cool-gray);
     padding-bottom: 2.2rem;
+}
+
+@media screen and (max-width: 700px) {
+    .form-section {
+        display: flex;
+        flex-direction: column;
+        padding: 2rem 1rem;
+        width: 85vw;
+        border-radius: .5rem;
+        margin-top: -4.7rem;
+        background-color: var(--White);
+    }
+
+    .title h1 {
+        font-size: 1.8rem;
+    }
+
+    .title p {
+        line-height: 1.6rem;
+        padding-bottom: 1.6rem;
+    }
 }
 
 /* INFO SECTION */
@@ -184,6 +240,10 @@ input::-webkit-inner-spin-button {
     margin-top: auto;
 }
 
+#nextBtnInfo {
+    margin-left: auto;
+}
+
 .primary-btn {
     align-self: flex-end;
     border: none;
@@ -219,6 +279,53 @@ input::-webkit-inner-spin-button {
     font-weight: 500;
     padding: 0;
 
+}
+
+@media screen and (max-width: 700px) {
+    .btn-container {
+        position: absolute;
+        bottom: 2rem;
+        background-color: transparent;
+        width: 90%;
+        margin-left: -.5rem;
+    }
+
+    .primary-btn {
+        align-self: flex-end;
+        border: none;
+        color: var(--White);
+        border-radius: .5rem;
+        background-color: var(--Marine-blue);
+        padding: 1rem 1.5rem;
+        cursor: pointer;
+    }
+
+    .primary-btn:hover {
+        opacity: .8;
+    }
+
+    .back-btn {
+        border: none;
+        background-color: transparent;
+        color: var(--Cool-gray);
+        font-weight: 500;
+        cursor: pointer;
+    }
+
+    .back-btn:hover {
+        font-weight: 700;
+    }
+
+    .change-btn {
+        border: none;
+        background-color: transparent;
+        text-decoration: underline;
+        color: var(--Cool-gray);
+        font-size: .9rem;
+        font-weight: 500;
+        padding: 0;
+
+    }
 }
 
 /* PLANS SECTION */
@@ -276,6 +383,21 @@ input::-webkit-inner-spin-button {
     font-size: .9rem;
     color: var(--Cool-gray);
     font-weight: 500;
+}
+
+@media screen and (max-width: 700px) {
+    .card-grid {
+        display: flex;
+        flex-direction: column;
+        gap: 1rem;
+        padding-bottom: 2rem;
+    }
+
+    .card {
+        flex-direction: row;
+        justify-content: flex-start;
+        gap: 2vh;
+    }
 }
 
 /* TOGGLE SWITCH */
@@ -398,7 +520,47 @@ input::-webkit-inner-spin-button {
     font-size: 1.3rem;
 }
 
+/* FINAL SECTION */
+.final {
+    margin: auto;
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+    padding: 5rem;
+    text-align: center;
+}
 
+.final h2 {
+    font-size: 2rem;
+    color: var(--Marine-blue);
+    margin: 0;
+    padding-top: 2rem;
+}
+
+.final p {
+    color: var(--Cool-gray);
+    line-height: 1.4rem;
+}
+
+@media screen and (max-width: 700px) {
+    .final {
+        padding: 5rem 1.2rem;
+        text-align: center;
+        background-color: var(--White);
+        border-radius: .5rem;
+        width: 80vw;
+        margin-top: -4.5rem;
+    }
+
+    .final h2 {
+        font-size: 1.8rem;
+    }
+
+    .final p {
+        line-height: 1.6rem;
+    }
+}
 
 /* JAVASCRIPT CLASSES */
 .hidden {
